--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,8 +3,18 @@
     <div>
     <%= link_to restaurant.name, restaurant_path(restaurant) %>
     <%= restaurant.description %>
+    <% if restaurant.reviews.any? %>
+    <ul>
+      <% restaurant.reviews.each do |review|%>
+      <li>
+        <%= review.thoughts %>
+      </li>
+      <% end %>
+    </ul>
+    <% end %>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
+    <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
     </div>
   <% end %>
 <% else %>
