--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -3,7 +3,7 @@
     <div>
     <%= link_to restaurant.name, restaurant_path(restaurant) %>
     <%= restaurant.description %>
-    <h2>Average rating: <%= restaurant.average_rating.to_i %></h2>
+    <h2>Average rating: <%= star_rating(restaurant.average_rating) %></h2>
     <% if restaurant.reviews.any? %>
     <ul>
       <% restaurant.reviews.each do |review|%>
