--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -9,8 +9,8 @@
       <% restaurant.reviews.each do |review|%>
       <li>
         <%= review.thoughts %>
-        <p><%= pluralize review.endorsements.count, 'endorsement' %></p>
-        <%= link_to "Endorse Review", review_endorsements_path(review.id), method: :post%>
+        <%= link_to "Endorse", review_endorsements_path(review), class: 'endorsements-link' %>
+        <span class="endorsements_count"> <%= review.endorsements.count %> </span> <%= 'endorsement'.pluralize(review.endorsements.count) %>
       </li>
       <% end %>
     </ul>
