--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -4,6 +4,7 @@
     <%= link_to restaurant.name, restaurant_path(restaurant) %>
     <%= restaurant.description %>
     <h2>Average rating: <%= star_rating(restaurant.average_rating) %></h2>
+    <%= image_tag restaurant.image.url(:thumb) %>
     <% if restaurant.reviews.any? %>
     <ul>
       <% restaurant.reviews.each do |review|%>
